cmake_minimum_required(VERSION 3.26)
project(CarRun_HuaHai_Hardware C)

set(CMAKE_C_STANDARD 11)

include_directories(code/Buzzer)
include_directories(code/car_control)
include_directories(code/current_sampling)
include_directories(code/icm20602_data_pose)
include_directories(code/ips_show)
include_directories(code/Kalman)
include_directories(code/key)
include_directories(code/motor)
include_directories(code/my_flash)
include_directories(code/pid)
include_directories(code/servo)
include_directories(code/timer)
include_directories(code/uart)
include_directories(code/voltage_sampling)
include_directories(libraries/infineon_libraries/Configurations)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/InternalMux)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Asc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Lin)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Spi)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Icu)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Timer)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TPwm)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Cam)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/CStart)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Irq)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Trap)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Dma)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Rdc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Dts)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Emem/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Eray)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Crc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Fft)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Flash/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tim/In)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Trig)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Hssl)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/I2c)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Driver)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Msc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Mtu/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Can)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Io)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Psi5)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Sent)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Smu/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Src/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Std)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Timer)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Adc)
include_directories(libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Std)
include_directories(libraries/infineon_libraries/Infra/Platform/Tricore/Compilers)
include_directories(libraries/infineon_libraries/Infra/Sfr)
include_directories(libraries/infineon_libraries/Infra/Sfr/TC26B)
include_directories(libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/_Utilities)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/If)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/If/Ccu6If)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/StdIf)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/SysSe/Comm)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/SysSe/General)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math)
include_directories(libraries/infineon_libraries/Service/CpuGeneric/SysSe/Time)
include_directories(libraries/zf_common)
include_directories(libraries/zf_device)
include_directories(libraries/zf_driver)
include_directories(user)

add_executable(CarRun_HuaHai_Hardware
        code/Buzzer/buzzer.c
        code/Buzzer/buzzer.h
        code/car_control/car_control.c
        code/car_control/car_control.h
        code/current_sampling/INA226.c
        code/current_sampling/INA226.h
        code/icm20602_data_pose/icm20602_data_handle.c
        code/icm20602_data_pose/icm20602_data_handle.h
        code/ips_show/show_task.c
        code/ips_show/show_task.h
        code/Kalman/Kalman_Filter.c
        code/Kalman/Kalman_Filter.h
        code/key/key.c
        code/key/key.h
        code/motor/motor.c
        code/motor/motor.h
        code/my_flash/my_flash.c
        code/my_flash/my_flash.h
        code/pid/pid.c
        code/pid/pid.h
        code/servo/servo.c
        code/servo/servo.h
        code/timer/timer.c
        code/timer/timer.h
        code/uart/uart.c
        code/uart/uart.h
        code/voltage_sampling/voltage_sampling.c
        code/voltage_sampling/voltage_sampling.h
        libraries/infineon_libraries/Configurations/Ifx_Cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxAsclin_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxAsclin_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCcu6_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCcu6_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCif_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCif_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCpu_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxCpu_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxDma_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxDma_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxDsadc_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxDts_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxEmem_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxEmem_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxEray_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxEray_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxEth_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxFce_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxFft_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxFlash_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxFlash_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxGlobal_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxGpt12_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxGtm_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxGtm_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxHssl_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxHssl_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxI2c_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxI2c_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxIom_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMsc_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMsc_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMtu_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMtu_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMultican_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxMultican_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxPort_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxPort_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5s_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxQspi_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxQspi_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxScu_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxScu_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSent_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSent_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSmu_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSmu_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSrc_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxSrc_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxStm_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxStm_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxVadc_cfg.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Impl/IfxVadc_cfg.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.asm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_Fifo.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_Fifo.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/InternalMux/Ifx_InternalMux.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_Lib/InternalMux/Ifx_InternalMux.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxAsclin_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxAsclin_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxCcu6_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxCcu6_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxCif_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxCif_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxDsadc_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxDsadc_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxEray_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxEray_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxEth_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxEth_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxGpt12_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxGpt12_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxGtm_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxGtm_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxI2c_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxI2c_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxMsc_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxMsc_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxMultican_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxMultican_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPort_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPort_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5s_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5s_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxQspi_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxQspi_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxScu_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxScu_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxSent_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxSent_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxSmu_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxSmu_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxVadc_PinMap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/_PinMap/IfxVadc_PinMap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Asc/IfxAsclin_Asc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Asc/IfxAsclin_Asc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Lin/IfxAsclin_Lin.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Lin/IfxAsclin_Lin.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Spi/IfxAsclin_Spi.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Spi/IfxAsclin_Spi.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Std/IfxAsclin.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Asclin/Std/IfxAsclin.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Icu/IfxCcu6_Icu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Icu/IfxCcu6_Icu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc/IfxCcu6_PwmBc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc/IfxCcu6_PwmBc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl/IfxCcu6_PwmHl.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl/IfxCcu6_PwmHl.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Std/IfxCcu6.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Std/IfxCcu6.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Timer/IfxCcu6_Timer.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/Timer/IfxCcu6_Timer.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger/IfxCcu6_TimerWithTrigger.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger/IfxCcu6_TimerWithTrigger.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TPwm/IfxCcu6_TPwm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Ccu6/TPwm/IfxCcu6_TPwm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Cam/IfxCif_Cam.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Cam/IfxCif_Cam.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Std/IfxCif.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cif/Std/IfxCif.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart0.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart1.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Irq/IfxCpu_Irq.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Irq/IfxCpu_Irq.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_Types.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesDcc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesGhs.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesGnuc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesTasking.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_Intrinsics.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsDcc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGhs.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGnuc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsTasking.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Std/Platform_Types.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Trap/IfxCpu_Trap.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Cpu/Trap/IfxCpu_Trap.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Dma/IfxDma_Dma.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Dma/IfxDma_Dma.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Std/IfxDma.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dma/Std/IfxDma.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc/IfxDsadc_Dsadc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc/IfxDsadc_Dsadc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Rdc/IfxDsadc_Rdc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Rdc/IfxDsadc_Rdc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Std/IfxDsadc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dsadc/Std/IfxDsadc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Dts/IfxDts_Dts.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Dts/IfxDts_Dts.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Std/IfxDts.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Dts/Std/IfxDts.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Emem/Std/IfxEmem.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Emem/Std/IfxEmem.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Eray/IfxEray_Eray.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Eray/IfxEray_Eray.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Std/IfxEray.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eray/Std/IfxEray.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071/IfxEth_Phy_Pef7071.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071/IfxEth_Phy_Pef7071.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Std/IfxEth.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Eth/Std/IfxEth.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Crc/IfxFce_Crc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Crc/IfxFce_Crc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Std/IfxFce.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fce/Std/IfxFce.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Fft/IfxFft_Fft.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Fft/IfxFft_Fft.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Std/IfxFft.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Fft/Std/IfxFft.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Flash/Std/IfxFlash.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Flash/Std/IfxFlash.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc/IfxGpt12_IncrEnc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc/IfxGpt12_IncrEnc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/Std/IfxGpt12.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gpt12/Std/IfxGpt12.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm/IfxGtm_Atom_Pwm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm/IfxGtm_Atom_Pwm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl/IfxGtm_Atom_PwmHl.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl/IfxGtm_Atom_PwmHl.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer/IfxGtm_Atom_Timer.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer/IfxGtm_Atom_Timer.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Atom.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Atom.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Cmu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Cmu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Dpll.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Dpll.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tbu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tbu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tim.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tim.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tom.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tom.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tim/In/IfxGtm_Tim_In.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tim/In/IfxGtm_Tim_In.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm/IfxGtm_Tom_Pwm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm/IfxGtm_Tom_Pwm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl/IfxGtm_Tom_PwmHl.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl/IfxGtm_Tom_PwmHl.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer/IfxGtm_Tom_Timer.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer/IfxGtm_Tom_Timer.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Trig/IfxGtm_Trig.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Gtm/Trig/IfxGtm_Trig.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Hssl/IfxHssl_Hssl.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Hssl/IfxHssl_Hssl.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Std/IfxHssl.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Hssl/Std/IfxHssl.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/I2c/IfxI2c_I2c.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/I2c/IfxI2c_I2c.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/Std/IfxI2c.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/I2c/Std/IfxI2c.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Driver/IfxIom_Driver.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Driver/IfxIom_Driver.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Std/IfxIom.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Iom/Std/IfxIom.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Msc/IfxMsc_Msc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Msc/IfxMsc_Msc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Std/IfxMsc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Msc/Std/IfxMsc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Mtu/Std/IfxMtu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Mtu/Std/IfxMtu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Can/IfxMultican_Can.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Can/IfxMultican_Can.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Std/IfxMultican.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Multican/Std/IfxMultican.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Io/IfxPort_Io.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Io/IfxPort_Io.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Std/IfxPort.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Port/Std/IfxPort.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Psi5/IfxPsi5_Psi5.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Psi5/IfxPsi5_Psi5.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Std/IfxPsi5.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5/Std/IfxPsi5.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s/IfxPsi5s_Psi5s.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s/IfxPsi5s_Psi5s.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Std/IfxPsi5s.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Psi5s/Std/IfxPsi5s.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster/IfxQspi_SpiMaster.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster/IfxQspi_SpiMaster.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave/IfxQspi_SpiSlave.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave/IfxQspi_SpiSlave.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/Std/IfxQspi.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Qspi/Std/IfxQspi.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuCcu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuCcu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuEru.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuEru.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.asm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Sent/IfxSent_Sent.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Sent/IfxSent_Sent.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Std/IfxSent.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Sent/Std/IfxSent.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Smu/Std/IfxSmu.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Smu/Std/IfxSmu.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Src/Std/IfxSrc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Src/Std/IfxSrc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Std/IfxStm.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Std/IfxStm.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Timer/IfxStm_Timer.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Stm/Timer/IfxStm_Timer.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Adc/IfxVadc_Adc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Adc/IfxVadc_Adc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Std/IfxVadc.c
        libraries/infineon_libraries/iLLD/TC26B/Tricore/Vadc/Std/IfxVadc.h
        libraries/infineon_libraries/iLLD/TC26B/Tricore/IfxLldVersion.h
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerDcc.c
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerDcc.h
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerGhs.c
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerGhs.h
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerGnuc.c
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerGnuc.h
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/Compilers.h
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerTasking.c
        libraries/infineon_libraries/Infra/Platform/Tricore/Compilers/CompilerTasking.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/Ifx_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/Ifx_TypesReg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCan_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCan_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCan_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCif_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCif_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCif_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDma_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDma_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDma_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEray_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEray_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEray_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEth_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEth_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxEth_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFce_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFce_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFce_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFft_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFft_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFft_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxInt_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxInt_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxInt_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxIom_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxIom_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxIom_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPort_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPort_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPort_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxScu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxScu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxScu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSent_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSent_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSent_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxStm_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxStm_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxStm_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_regdef.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_bf.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_reg.h
        libraries/infineon_libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_regdef.h
        libraries/infineon_libraries/Service/CpuGeneric/_Utilities/Ifx_Assert.h
        libraries/infineon_libraries/Service/CpuGeneric/If/Ccu6If/Icu.h
        libraries/infineon_libraries/Service/CpuGeneric/If/Ccu6If/PwmHl.h
        libraries/infineon_libraries/Service/CpuGeneric/If/Ccu6If/Timer.h
        libraries/infineon_libraries/Service/CpuGeneric/If/Ccu6If/TPwm.h
        libraries/infineon_libraries/Service/CpuGeneric/If/SpiIf.c
        libraries/infineon_libraries/Service/CpuGeneric/If/SpiIf.h
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf.h
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_DPipe.c
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_DPipe.h
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_Pos.c
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_Pos.h
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_PwmHl.c
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_PwmHl.h
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_Timer.c
        libraries/infineon_libraries/Service/CpuGeneric/StdIf/IfxStdIf_Timer.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp/Assert.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp/Assert.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp/Bsp.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Bsp/Bsp.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Console.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Console.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Shell.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Shell.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/General/Ifx_GlobalResources.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/General/Ifx_GlobalResources.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_AngleTrkF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_AngleTrkF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_Cf32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_Cf32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_Crc.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_Crc.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32_BitReverseTable.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32_TwiddleTable.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_IntegralF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_IntegralF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LowPassPt1F32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LowPassPt1F32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_Lut.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32_Table.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutIndexedLinearF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLinearF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLinearF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLSincosF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLSincosF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32_Table.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_RampF32.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_RampF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32.h
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32_BlackmanHarrisTable.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32_HannTable.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Time/Ifx_DateTime.c
        libraries/infineon_libraries/Service/CpuGeneric/SysSe/Time/Ifx_DateTime.h
        libraries/zf_common/zf_common_clock.c
        libraries/zf_common/zf_common_clock.h
        libraries/zf_common/zf_common_debug.c
        libraries/zf_common/zf_common_debug.h
        libraries/zf_common/zf_common_fifo.c
        libraries/zf_common/zf_common_fifo.h
        libraries/zf_common/zf_common_font.c
        libraries/zf_common/zf_common_font.h
        libraries/zf_common/zf_common_function.c
        libraries/zf_common/zf_common_function.h
        libraries/zf_common/zf_common_headfile.h
        libraries/zf_common/zf_common_interrupt.c
        libraries/zf_common/zf_common_interrupt.h
        libraries/zf_common/zf_common_typedef.h
        libraries/zf_device/zf_device_absolute_encoder.c
        libraries/zf_device/zf_device_absolute_encoder.h
        libraries/zf_device/zf_device_bluetooth_ch9141.c
        libraries/zf_device/zf_device_bluetooth_ch9141.h
        libraries/zf_device/zf_device_camera.c
        libraries/zf_device/zf_device_camera.h
        libraries/zf_device/zf_device_config.h
        libraries/zf_device/zf_device_dl1a.c
        libraries/zf_device/zf_device_dl1a.h
        libraries/zf_device/zf_device_gps_tau1201.c
        libraries/zf_device/zf_device_gps_tau1201.h
        libraries/zf_device/zf_device_icm20602.c
        libraries/zf_device/zf_device_icm20602.h
        libraries/zf_device/zf_device_imu660ra.c
        libraries/zf_device/zf_device_imu660ra.h
        libraries/zf_device/zf_device_imu963ra.c
        libraries/zf_device/zf_device_imu963ra.h
        libraries/zf_device/zf_device_ips114.c
        libraries/zf_device/zf_device_ips114.h
        libraries/zf_device/zf_device_ips200.c
        libraries/zf_device/zf_device_ips200.h
        libraries/zf_device/zf_device_key.c
        libraries/zf_device/zf_device_key.h
        libraries/zf_device/zf_device_mpu6050.c
        libraries/zf_device/zf_device_mpu6050.h
        libraries/zf_device/zf_device_mt9v03x.c
        libraries/zf_device/zf_device_mt9v03x.h
        libraries/zf_device/zf_device_oled.c
        libraries/zf_device/zf_device_oled.h
        libraries/zf_device/zf_device_ov7725.c
        libraries/zf_device/zf_device_ov7725.h
        libraries/zf_device/zf_device_scc8660.c
        libraries/zf_device/zf_device_scc8660.h
        libraries/zf_device/zf_device_tft180.c
        libraries/zf_device/zf_device_tft180.h
        libraries/zf_device/zf_device_tsl1401.c
        libraries/zf_device/zf_device_tsl1401.h
        libraries/zf_device/zf_device_type.c
        libraries/zf_device/zf_device_type.h
        libraries/zf_device/zf_device_virtual_oscilloscope.c
        libraries/zf_device/zf_device_virtual_oscilloscope.h
        libraries/zf_device/zf_device_wifi_uart.c
        libraries/zf_device/zf_device_wifi_uart.h
        libraries/zf_device/zf_device_wireless_uart.c
        libraries/zf_device/zf_device_wireless_uart.h
        libraries/zf_driver/zf_driver_adc.c
        libraries/zf_driver/zf_driver_adc.h
        libraries/zf_driver/zf_driver_delay.c
        libraries/zf_driver/zf_driver_delay.h
        libraries/zf_driver/zf_driver_dma.c
        libraries/zf_driver/zf_driver_dma.h
        libraries/zf_driver/zf_driver_encoder.c
        libraries/zf_driver/zf_driver_encoder.h
        libraries/zf_driver/zf_driver_exti.c
        libraries/zf_driver/zf_driver_exti.h
        libraries/zf_driver/zf_driver_flash.c
        libraries/zf_driver/zf_driver_flash.h
        libraries/zf_driver/zf_driver_gpio.c
        libraries/zf_driver/zf_driver_gpio.h
        libraries/zf_driver/zf_driver_pit.c
        libraries/zf_driver/zf_driver_pit.h
        libraries/zf_driver/zf_driver_pwm.c
        libraries/zf_driver/zf_driver_pwm.h
        libraries/zf_driver/zf_driver_soft_iic.c
        libraries/zf_driver/zf_driver_soft_iic.h
        libraries/zf_driver/zf_driver_soft_spi.c
        libraries/zf_driver/zf_driver_soft_spi.h
        libraries/zf_driver/zf_driver_spi.c
        libraries/zf_driver/zf_driver_spi.h
        libraries/zf_driver/zf_driver_timer.c
        libraries/zf_driver/zf_driver_timer.h
        libraries/zf_driver/zf_driver_uart.c
        libraries/zf_driver/zf_driver_uart.h
        user/cpu0_main.c
        user/cpu0_main.h
        user/cpu1_main.c
        user/isr.c
        user/isr.h
        user/isr_config.h)
